Schedule/Gaming/Weekly/V7/README.md

***

# New gaming schedule (weekly)

On Saturday, October 24th 2020, I had to set a schedule to limit my gaming. I went on a hiatus that lasted over half the month, and returning into things, I am already overloaded at 60%
I have decided to split non-daily games into time slots on certain days. My new limit is 2.5-4.5 hours of gaming a day, 1 hour limit on shooting games (included into total)

***

## Game list:

### A

AdVenture Capitalist

AdVenture Communist

### B

Bakery story

Boom Beach

Bit City

### C

Clash of Clans

Clash Royale

City story

### D

Disco Zoo

### E

Egg, Inc.

### F

Farm story

Fashion story

### G

### H

Hay day

### I

Idle Miner Tycoon

### J

Jewels

### K

### L

Lego Tower

### M

Merge Plane

Minecraft

Mari0

### N

### O

### P

Pet shop story

Plants vs. Zombies 2

Pocket Frogs

Pocket Trains

### Q

### R

Restaurant Story

### S

### T

Team Fortress 2

Tiny Tower

Tiny Death Star

### U

### V

### W

### X

### Y

### Z

25 games total

***

# The weekly schedule

## Monday:

Usuals:

> Tiny Tower, possibly: Minecraft

Pocket day:

> Pocket frogs, Pocket trains

## Tuesday:

Usuals: 

> Tiny Tower, possibly: Minecraft

Others:

> Bit City

Note: as of February 16th 2021, Idle Miner Tycoon has been moved to a monthly schedule, due to excessive play time. The game is now played on the first Tuesday of every month.

## Wednesday:

Usuals:

> Tiny Tower, possibly: Minecraft

Others:

> Disco Zoo

> Sky Burger (modern) - Started again on January 2nd 2021, resuming for the first time as a weekly entry on January 6th 2021

> Empty time slot, pick 1 game at random

## Thursday:

Usuals:

> Tiny Tower, possibly: Minecraft

Lego day: 

> Lego Tower

Storm day: 

> Restaurant story, Bakery story, Pet shop story, Fashion story, Farm story, City story

## Friday:

Usuals: 

> Tiny Tower, possibly: Minecraft

Oldschool Friday: 

> Merge Plane

Others:

> Tiny Death Star (started: November 19th 2020, officially: November 20th 2020) Egg, Inc. (started: March 5th 2021)

## Saturday

Usuals:

> Tiny Tower, possibly: Minecraft

Economic Saturday: 

> AdCap, AdCom

## Sunday:

Usuals:

> Tiny Tower, possibly: Minecraft

Supercell Sunday:

> Clash of Clans, Boom Beach, Hay Day, Clash Royale

### End of week

***

# Monthly schedule

The new monthly schedule is for games that shouldn't be played very often. The first game to be added to this is Idle Miner Tycoon, as it was taking up too much time every Tuesday

## Monday 1

No time slots scheduled

## Tuesday 1

First Tuesday of each month: Idle Miner Tycoon

## Wednesday 1

No time slots scheduled

## Thursday 1

No time slots scheduled

## Friday 1

{UNDER DECISION} First Friday of each month: Egg, Inc.

## Saturday 1

No time slots scheduled

## Sunday 1

No time slots scheduled

***

### Games to pick at random:

* <none>

* Team Fortress 2

* Bit City

* Minecraft

* Clash of Clans

* Clash Royale

* Boom Beach

* Hay Day

* Merge Plane

* Idle Miner Tycoon

* Pocket Trains

* Pocket Frogs

* Disco Zoo

* Lego Tower

* Plants vs. Zombies 2

* Mari0

* Tiny Death Star

* Other

***

## Limitations

On Thursday, November 5th 2020, I discovered that all 6 storm8 games no longer let me cheat and have infinite duration on items produced. It glitched out a couple times and let items be preserved for over 2 weeks without paying extra. This doesn't seem to work anymore, and now the sessions are being operated differently.

> Minor update from November 19th 2020: this issue no longer applies to Farm Story (unless the 4 day crop expires before the 8 day point) but I have gotten used to gameplay like this.

2 days are dreaded to me (Friday and Saturday) as my Egg Inc and AdCom/AdCap sessions drag on too long due to procrastination and addiction problems. I have been working for months (as of March 24th 2021) to try and find a fix for these days

***

## Notes

Gameplay is photographed as part of my journaling project, and for stock imagery. Ads are photographed too.

I originally played on a Samsung Galaxy S7 edge from 2016 to November 12th 2020. As of November 13th 2020, I began transitioning gameplay away from the old S7 edge to a new Samsung Galaxy S20 FE I got on November 12th 2020. I really like the phone, there is only 1 part of it I consider a downgrade, which is that I went from a screen resolution of 2560x1440 (horizontal, 1440p) 1440x2560 (vertical, 1440p) to 2000x1080 (horizontal, 1080p) 1080x2000 (vertical, 1080p) the only game I still actively play on my old phone is Jewels, because it isn't compatible with Android 10.0, and I want to max out my score on it before abandoning my old S7 edge

Starting on November 19th 2020, I began to play Tiny Death Star again. As the game proves functional and fun, I have decided to turn it into a weekly thing. I will be playing this game every Friday. The first time I played on the weekly schedule was Friday, November 20th 2020.

***

## Game history

### October 2020

#### October 24th 2020

* ? missing entries

* AdVenture Capitalist

* AdVenture Communist

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 25th 2020

* Clash of Clans

* Clash Royale

* Boom Beach

* Hay Day

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 26th 2020

* Pocket Frogs

* Pocket Trains

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 27th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 28th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 29th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 30th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### October 31st 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

### November 2020

#### November 1st 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 2nd 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 3rd 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 4th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 5th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 6th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 7th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 8th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 9th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 10th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 11th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 12th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 13th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 14th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 15th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 16th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 17th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* (Unknown: Minecraft)

#### November 18th 2020

* Entry unavailable

* Jewels

* Tiny Tower

* Minecraft

#### November 19th 2020

* Restaurant Story

* Bakery Story

* Pet Shop Story

* Fashion Story

* Farm Story

* City Story

* Lego Tower

* Jewels

* Tiny Tower

* Tiny Death Star

* Pocket Plane

#### November 20th 2020

* Jewels

* Tiny Tower

* Tiny Death Star

* Merge Plan

* (Unknown: Minecraft)

***

## Under consideration

* It is under consideration that Lego Tower gameplay should be moved to Wednesday, as Thursday already has 6 games set. It takes me all the way down to 13% battery to successfully play all 7 games under a new style. The con of this is that Wednesday (alonh with Friday) is a lax day, with 3 required games instead of 4. I am unsure if I want to get rid of my only free day.

* It is under consideration if I will resume playing Tiny Tower in 2021 or not. On January 27th 2021, my phone was auto-updated to Android 11. Tiny Tower kept crashing upon trying to play, and I lost my 620+ consecutive day streak. Accidentally a few days later, I found the game worked again, but didn't feel like playing due to my lost progress. I am still trying to gain interest to play again.

> As of March 24th 2021, I have not resumed gameplay. On February 17th 2021, this status post was shortened to save memory. See previous entries for more info.

> I have been starting to consider playing at night again, but at the moment, I am happy to have no major tasks to do after I wrap up GitHub work for the night.

***

***

## File info

File type: `Markdown (*.md)`

File version: `7 (Wednesday, March 24th 2021 at 9:18 pm)`

Line count (including blank lines and compiler line): `0,828`

***

## File history

Version 1 (Saturday, October 24th 2020 at 8:48 pm)

> Changes:

> * Started the file

> * Added a general description

> * Added a game list

> * Added the weekly schedule

> * Added the `games to pick at random` section

> * No other changes in version 1

Version 2 (Thursday, November 5th 2020 at 9:12 pm)

> Changes:

> * Updated the game list to spread it out more and make it more readable

> * Updated the syntax of the weekly schedule, highlighting, fixing grammar errors, and moving games around

> * Added the `limitations` section

> * Added the `under consideration` section

> * No other changes in version 2

Version 3 (Thursday, November 19th 2020 at 6:53 pm)

> Changes:

> * Updated the schedule

> * Made the `games to pick at random` section into a bulleted list

> * Updated the `limitations` section

> * Added the `notes` section

> * Added the `game history` section

> * Updated the `under consideration` section

> * No other changes in version 3

Version 4 (Friday, November 20th 2020 at 6:18 pm)

> Changes:

> * Added a file history section

> * Updated the game listing, adding in Tiny Death Star to Friday

> * Updated the Friday entry

> * Updated the `notes` section

> * Updated the `game history` section

> * No other changes in version 4

Version 5 (Sunday, January 3rd 2021 at 9:29 pm)

> Changes:

> * Updated file history section

> * Updated the game listing, adding in Sky Burger to Wednesday

> * Updated the Wednesday entry

> * No other changes in version 5

Version 6 (Wednesday, February 17th 2021 at 9:11 pm)

> Changes:

> * Removed 7 instances of Jewels, as it is no longer played daily

> * Updated the weekly Tuesday schedule

> * Added the new monthly schedule

> * Updated the file history section

> * Added the file info section

> * No other changes in version 6

Version 7 (Wednesday, March 24th 2021 at 9:18 pm)

> Changes:

> * Added decision info for Egg Inc. becoming a monthly game

> * Updated the Friday weekly schedule

> * Referenced the `2 dreaded days` under the limitations section

> * Updated the game list

> * Added info on Tiny Tower

> * Added a footer

> * Updated the file history section

> * Added the file info section

> * No other changes in version 7

Version 8 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 8

Version 9 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 9

Version 10 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 10

Version 11 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 11

Version 12 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 12

Version 13 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 13

Version 14 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 14

***

## You have reached the end of the README file

( [Back to top](#Top) | [Exit (GitHub)](https://github.com) | [Exit (GistHub, gist.github.com)](https://gist.github.com) )

### EOF

***
